# sqlite3-mockup-db-generator

./: README.md  names.py  pyproject.toml  requirements.txt
